--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,7 +19,7 @@ const pageDescription = description ? description : content.description
 
 <body class="site-container">
   <Navbar />
-  <main class="container">
+  <main class="container--wide">
     <slot />
   </main>
 </body>
