chore: supressing typescript
supressing date errors in typescript

--- a/src/components/posts/PostList.astro
+++ b/src/components/posts/PostList.astro
@@ -1,6 +1,7 @@
 ---
 const posts = await Astro.glob('../../pages/notes/*.mdx');
 const sortedPosts = posts.sort(
+  //@ts-ignore
   (a, b) => new Date(b.frontmatter.pubDate) - new Date(a.frontmatter.pubDate)
 );
 ---
